# puzzup

./: Dockerfile  README.md  docker-compose.yaml  docker-entrypoint.sh  pyproject.toml
puzzle_editing/: google_integration.py  messaging.py  models.py  slashcommands.py  views.py
puzzle_editing/discord/: perm.py
puzzle_editing/fixtures/: auth.yaml
puzzle_editing/templates/: testsolve_one.html
settings/: base.py  dev.py  prod.py  staging.py
