[tool]
[tool.poetry]
name = "puzzup-2023"
version = "0.0.0"
description = "Puzzle development webapp"
authors = ["betaveros", "mitchgu", "jakob223", "dvorak42", "fortenforge", "Sandy Weisz", "James Sugrono", "teammate"]

[tool.poetry.dependencies]
python = "^3.10"
asgiref = "^3.2"
bleach = "^3.1"
certifi = "^2020.6"
click = "^7.1"
cycler = "^0.10"
discord-interactions = "^0.2"
dj-database-url = "^0.5"
django = "^3.1"
django-debug-toolbar = "3.2"
django-filter = "^2.4"
django-import-export = "^2.7"
djangorestframework = "^3.12"
gevent = "^21"
gitdb = "^4.0"
gitpython = "^3.1"
greenlet = "^1.1"
gunicorn = "^20.0"
importlib-metadata = "^1.7"
invoke = "^1.6"
ipython = "^8.0"
kiwisolver = "^1.2"
markdown = "^3.2"
matplotlib = "^3.5"
newrelic = "^5.16"
numpy = "^1.22"
pip-tools = "^5.3"
postmarker = "^1.0"
psycopg2-binary = "^2.9"
pydantic = "^1.9"
pyparsing = "^2.4"
python-dateutil = "^2.8"
python-decouple = "^3.5"
python-dotenv = "^0.19"
pytz = "^2020.1"
pyyaml = "^6.0"
requests = "^2.25"
sentry-sdk = "^1.5"
six = "^1.15"
smmap = "^3.0"
sqlparse = "^0.3"
webencodings = "^0.5"
whitenoise = "^5.3"
zipp = "^3.1"
"zope.event" = "^4"
"zope.interface" = "^5.1"
beautifulsoup4 = "^4.10"
google-api-python-client = "^2.37"
Pillow = "^9.2"
tzdata = "^2024.1"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
pre-commit = "^2.17"
